[gd_scene load_steps=4 format=3 uid="uid://bbi521t8ayr48"]

[ext_resource type="Theme" uid="uid://s7hlwwefuhgh" path="res://addons/ridiculous_stream/ui/chat_message.theme" id="1_wix21"]
[ext_resource type="Script" path="res://addons/ridiculous_stream/instances/pnl_chat.gd" id="1_x2vuy"]
[ext_resource type="PackedScene" uid="uid://bnvfuklj58uqa" path="res://addons/ridiculous_stream/instances/pnl_connect.tscn" id="3_e1ino"]

[node name="pnl_chat" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wix21")
script = ExtResource("1_x2vuy")

[node name="vb" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="lb_chat" type="RichTextLabel" parent="vb"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
bbcode_enabled = true
text = "TheYagich"
scroll_following = true
threaded = true
selection_enabled = true

[node name="ln_msg" type="LineEdit" parent="vb"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.160784, 0.764706, 0.65098, 1)
placeholder_text = "chat"

[node name="hb_msg" type="HBoxContainer" parent="vb"]
layout_mode = 2

[node name="ln_announce" type="LineEdit" parent="vb/hb_msg"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.160784, 0.764706, 0.65098, 1)
placeholder_text = "announcement"

[node name="opt_announce_color" type="OptionButton" parent="vb/hb_msg"]
unique_name_in_owner = true
layout_mode = 2
item_count = 6
popup/item_0/text = ""
popup/item_0/id = 0
popup/item_1/text = ""
popup/item_1/id = 5
popup/item_1/separator = true
popup/item_2/text = "blue"
popup/item_2/id = 1
popup/item_3/text = "green"
popup/item_3/id = 2
popup/item_4/text = "orange"
popup/item_4/id = 3
popup/item_5/text = "purple"
popup/item_5/id = 4

[node name="hb" type="HBoxContainer" parent="vb"]
layout_mode = 2

[node name="sl_font_size" type="HSlider" parent="vb/hb"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 12.0
max_value = 72.0
value = 28.0

[node name="lb_font_size" type="Label" parent="vb/hb"]
unique_name_in_owner = true
layout_mode = 2
text = "15"

[node name="chat_msg" type="AudioStreamPlayer" parent="."]

[node name="pnl_connect" parent="." instance=ExtResource("3_e1ino")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[connection signal="text_submitted" from="vb/ln_msg" to="." method="_on_ln_msg_text_submitted"]
[connection signal="text_submitted" from="vb/hb_msg/ln_announce" to="." method="_on_ln_announce_text_submitted"]
[connection signal="value_changed" from="vb/hb/sl_font_size" to="." method="_on_sl_font_size_value_changed"]
